# pymp4

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml  setup.py
src/pymp4/: cli.py  parser.py  util.py
tests/: test_box.py  test_dashboxes.py  test_util.py
